Add web scraping tool and Bulgaria Wants You content
- Create scrape-website.ts script for automated content extraction
- Scrape Bulgaria Wants You about pages (EN + BG)
- Add cheerio dependency for HTML parsing
- Update company name to "Bulgaria Wants You"
- Generate bilingual knowledge base content (7.5KB each)

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 OPENAI_API_KEY=sk-proj-your-api-key-here
 
 # Your company name (shown in chat)
-COMPANY_NAME=Your Company
+COMPANY_NAME=Bulgaria Wants You
 
 # Optional: OpenAI model to use (default: gpt-4o-mini for cost efficiency)
 # Options: gpt-4o, gpt-4o-mini, gpt-4-turbo, gpt-3.5-turbo
