--- a/package.json
+++ b/package.json
@@ -7,19 +7,21 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare-kb": "ts-node scripts/prepare-knowledge-base.ts"
+    "prepare-kb": "ts-node scripts/prepare-knowledge-base.ts",
+    "scrape": "ts-node scripts/scrape-website.ts"
   },
   "dependencies": {
+    "cheerio": "^1.1.2",
     "next": "^14.2.0",
+    "openai": "^4.52.0",
     "react": "^18.3.0",
-    "react-dom": "^18.3.0",
-    "openai": "^4.52.0"
+    "react-dom": "^18.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "typescript": "^5.4.0",
-    "ts-node": "^10.9.0"
+    "ts-node": "^10.9.0",
+    "typescript": "^5.4.0"
   }
 }
