--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,17 @@
 # OpenAI API Key (get from https://platform.openai.com/api-keys)
 OPENAI_API_KEY=sk-proj-your-api-key-here
 
+# Claude API Key (get from https://console.anthropic.com/settings/keys)
+# Optional - used as fallback if OpenAI fails
+ANTHROPIC_API_KEY=sk-ant-your-api-key-here
+
 # Your company name (shown in chat)
 COMPANY_NAME=Bulgaria Wants You
 
 # Optional: OpenAI model to use (default: gpt-4o-mini for cost efficiency)
 # Options: gpt-4o, gpt-4o-mini, gpt-4-turbo, gpt-3.5-turbo
 OPENAI_MODEL=gpt-4o-mini
+
+# Optional: Claude model to use (default: claude-sonnet-4)
+# Options: claude-sonnet-4-20250514, claude-opus-4-20250514
+CLAUDE_MODEL=claude-sonnet-4-20250514
