--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@types/node": "^20.14.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.10",
     "ts-node": "^10.9.0",
     "typescript": "^5.4.0"
   }
