--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,8 @@
 DEEPSEEK_API_KEY=sk-your-deepseek-key-here
 
 # OpenAI API Key (get from https://platform.openai.com/api-keys)
-# Fallback #1 if DeepSeek fails
+# Fallback if DeepSeek fails
 OPENAI_API_KEY=sk-proj-your-api-key-here
-
-# Claude API Key (get from https://console.anthropic.com/settings/keys)
-# Fallback #2 if OpenAI also fails
-ANTHROPIC_API_KEY=sk-ant-your-api-key-here
 
 # Your company name (shown in chat)
 COMPANY_NAME=Bulgaria Wants You
@@ -20,7 +16,3 @@ DEEPSEEK_MODEL=deepseek-chat
 # Optional: OpenAI model (default: gpt-4o-mini)
 # Options: gpt-4o, gpt-4o-mini, gpt-4-turbo, gpt-3.5-turbo
 OPENAI_MODEL=gpt-4o-mini
-
-# Optional: Claude model (default: claude-sonnet-4)
-# Options: claude-sonnet-4-20250514, claude-opus-4-20250514
-CLAUDE_MODEL=claude-sonnet-4-20250514
