Add real-time voice calling with Ultravox integration
- Add Ultravox voice call API endpoint with knowledge base integration
- Create voice test page with bilingual support (English/Bulgarian)
- Install ultravox-client SDK for real-time voice communication
- Add call status indicators and end call functionality
- Update README with voice calling setup instructions
- Add VOICE_SETUP_GUIDE.md with detailed implementation guide
- Configure ULTRAVOX_API_KEY in environment variables

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,7 @@ DEEPSEEK_MODEL=deepseek-chat
 # Optional: OpenAI model (default: gpt-4o-mini)
 # Options: gpt-4o, gpt-4o-mini, gpt-4-turbo, gpt-3.5-turbo
 OPENAI_MODEL=gpt-4o-mini
+
+# Ultravox API Key (get from https://app.ultravox.ai/settings/)
+# For real-time voice calling - 30 free minutes to test!
+ULTRAVOX_API_KEY=your-ultravox-api-key-here
