--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "^14.2.0",
     "openai": "^4.52.0",
     "react": "^18.3.0",
-    "react-dom": "^18.3.0"
+    "react-dom": "^18.3.0",
+    "ultravox-client": "^0.4.2"
   },
   "devDependencies": {
     "@types/node": "^20.14.0",
