--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ DEEPSEEK_API_KEY=sk-your-deepseek-key-here
 OPENAI_API_KEY=sk-proj-your-api-key-here
 
 # Your company name (shown in chat)
-COMPANY_NAME=Bulgaria Wants You
+COMPANY_NAME=ELW Group
 
 # Optional: DeepSeek model (default: deepseek-chat)
 # Options: deepseek-chat, deepseek-reasoner
